# cmake

commlibs/cmake/: CMakeLists.txt  clean.sh  define.cmake  env.cmake  hi3515.cmake  install.cmake  platform.cmake
commlibs/os/: CMakeLists.txt
commlibs/os/include/: os_def.h  os_file.h  os_freertos_esp32.h  os_linux.h  os_misc.h  os_semaphore.h  os_socket.h  os_windows.h  sd_os.h
commlibs/os/src/freertos/: freertos_platform.c  freertos_posix_semaphore.c
commlibs/os/src/freertos/esp32/: freertos_init.c  freertos_socket.c
commlibs/os/src/linux/: CMakeLists.txt  linux_init.c  linux_misc.c  linux_socket.c
commlibs/os/src/porting/: os_file.c  os_misc.c  os_socket.c
commlibs/os/src/windows/: win_init.c  win_misc.c  win_socket.c
commlibs/util/: CMakeLists.txt
commlibs/util/include/: kfifo.h  sd_global.h  sd_list.h  sd_listlib.h  sd_log_base.h  sd_msg.h  sd_msgdef.h  sd_msgsink.h  sd_stack.h
commlibs/util/src/: kfifo.c  sd_global.c  sd_listlib.c  sd_log.c  sd_msgsink.c  sd_ntp_check.c  sd_ntp_client.c  sd_util.c
